# ayp2_templates

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: matriz.hpp  selection.hpp
